kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sre-api
  namespace: sre-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sre-api
  template:
    metadata:
      labels:
        app: sre-api
    spec:
      containers:
        - name: sre-api
          image: enterprise-sre-api:1.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
